--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
     "axios": "^1.13.2",
-    "ngx-toastr": "^19.1.0",
+    "ngx-sonner": "^3.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
